--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
                 <version>2.2</version>
                 <configuration>          
                     <server>TomcatServer</server>
-                    <url>${remote.server}</url>
+                    <url>${139.59.147.87}</url>
                     <username>${remote.user}</username>
                     <password>${remote.password}</password>
                     <update>true</update>    
